--- a/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
@@ -325,7 +325,7 @@
 												<string key="NSFrame">{{284, 10}, {17, 10}}</string>
 												<reference key="NSSuperview" ref="75653363"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="778160476"/>
+												<reference key="NSNextKeyView" ref="271529655"/>
 												<string key="NSReuseIdentifierKey">_NS:328</string>
 												<reference key="IBUIBackgroundColor" ref="140928236"/>
 												<bool key="IBUIOpaque">NO</bool>
@@ -506,7 +506,7 @@
 										<string key="NSFrameSize">{310, 1}</string>
 										<reference key="NSSuperview" ref="749710472"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="271529655"/>
+										<reference key="NSNextKeyView" ref="511216842"/>
 										<reference key="IBUIBackgroundColor" ref="140928236"/>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
@@ -516,7 +516,7 @@
 										<string key="NSFrame">{{0, 169}, {310, 1}}</string>
 										<reference key="NSSuperview" ref="749710472"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="452184484"/>
+										<reference key="NSNextKeyView" ref="194365560"/>
 										<reference key="IBUIBackgroundColor" ref="140928236"/>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
@@ -524,8 +524,86 @@
 								<string key="NSFrame">{{5, 72}, {310, 170}}</string>
 								<reference key="NSSuperview" ref="490942180"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="511216842"/>
+								<reference key="NSNextKeyView" ref="778160476"/>
 								<reference key="IBUIBackgroundColor" ref="140928236"/>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
+							<object class="IBUIView" id="194365560">
+								<reference key="NSNextResponder" ref="490942180"/>
+								<int key="NSvFlags">292</int>
+								<object class="NSMutableArray" key="NSSubviews">
+									<bool key="EncodedWithXMLCoder">YES</bool>
+									<object class="IBUIImageView" id="985047090">
+										<reference key="NSNextResponder" ref="194365560"/>
+										<int key="NSvFlags">274</int>
+										<string key="NSFrame">{{10, 2}, {12, 12}}</string>
+										<reference key="NSSuperview" ref="194365560"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="40076364"/>
+										<string key="NSReuseIdentifierKey">_NS:567</string>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<object class="NSCustomResource" key="IBUIImage">
+											<string key="NSClassName">NSImage</string>
+											<string key="NSResourceName">also_stamped_by_badge@2x.png</string>
+										</object>
+									</object>
+									<object class="IBUILabel" id="40076364">
+										<reference key="NSNextResponder" ref="194365560"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{26, 0}, {131, 17}}</string>
+										<reference key="NSSuperview" ref="194365560"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="452184484"/>
+										<string key="NSReuseIdentifierKey">_NS:328</string>
+										<object class="NSColor" key="IBUIBackgroundColor" id="124712397">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MCAwAA</bytes>
+										</object>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">7</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<string key="IBUIText">Also stamped by</string>
+										<object class="NSColor" key="IBUITextColor">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MC43NQA</bytes>
+										</object>
+										<nil key="IBUIHighlightedColor"/>
+										<int key="IBUIBaselineAdjustment">1</int>
+										<float key="IBUIMinimumFontSize">12</float>
+										<object class="IBUIFontDescription" key="IBUIFontDescription">
+											<int key="type">2</int>
+											<double key="pointSize">12</double>
+										</object>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica-Bold</string>
+											<double key="NSSize">12</double>
+											<int key="NSfFlags">16</int>
+										</object>
+									</object>
+									<object class="IBUIScrollView" id="338685974">
+										<reference key="NSNextResponder" ref="194365560"/>
+										<int key="NSvFlags">268</int>
+										<string key="NSFrame">{{0, 19}, {310, 58}}</string>
+										<reference key="NSSuperview" ref="194365560"/>
+										<reference key="NSWindow"/>
+										<string key="NSReuseIdentifierKey">_NS:190</string>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<bool key="IBUIMultipleTouchEnabled">YES</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<bool key="IBUIAlwaysBounceHorizontal">YES</bool>
+										<bool key="IBUIPagingEnabled">YES</bool>
+										<bool key="IBUIShowsVerticalScrollIndicator">NO</bool>
+									</object>
+								</object>
+								<string key="NSFrame">{{5, 259}, {310, 77}}</string>
+								<reference key="NSSuperview" ref="490942180"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="985047090"/>
+								<string key="NSReuseIdentifierKey">_NS:196</string>
+								<reference key="IBUIBackgroundColor" ref="124712397"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</object>
@@ -533,10 +611,7 @@
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="62856249"/>
-						<object class="NSColor" key="IBUIBackgroundColor" id="124712397">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MCAwAA</bytes>
-						</object>
+						<reference key="IBUIBackgroundColor" ref="124712397"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -1007,6 +1082,30 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">alsoStampedByContainer</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="194365560"/>
+					</object>
+					<int key="connectionID">120</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">alsoStampedByLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="490942180"/>
+					</object>
+					<int key="connectionID">121</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">alsoStampedByScrollView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="338685974"/>
+					</object>
+					<int key="connectionID">123</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="490942180"/>
 						<reference key="destination" ref="372490531"/>
@@ -1149,6 +1248,7 @@
 							<reference ref="705838406"/>
 							<reference ref="62856249"/>
 							<reference ref="43189682"/>
+							<reference ref="194365560"/>
 						</object>
 						<reference key="parent" ref="880728759"/>
 					</object>
@@ -1356,6 +1456,33 @@
 						<reference key="parent" ref="749710472"/>
 						<string key="objectName">White top border</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">117</int>
+						<reference key="object" ref="194365560"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="985047090"/>
+							<reference ref="40076364"/>
+							<reference ref="338685974"/>
+						</object>
+						<reference key="parent" ref="490942180"/>
+						<string key="objectName">Also Stamped By Container</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">118</int>
+						<reference key="object" ref="985047090"/>
+						<reference key="parent" ref="194365560"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">119</int>
+						<reference key="object" ref="40076364"/>
+						<reference key="parent" ref="194365560"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">122</int>
+						<reference key="object" ref="338685974"/>
+						<reference key="parent" ref="194365560"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1376,6 +1503,11 @@
 					<string>108.IBPluginDependency</string>
 					<string>111.IBPluginDependency</string>
 					<string>116.IBPluginDependency</string>
+					<string>117.IBPluginDependency</string>
+					<string>117.IBUserGuides</string>
+					<string>118.IBPluginDependency</string>
+					<string>119.IBPluginDependency</string>
+					<string>122.IBPluginDependency</string>
 					<string>14.IBPluginDependency</string>
 					<string>14.IBUserGuides</string>
 					<string>15.CustomClassName</string>
@@ -1437,8 +1569,18 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<object class="NSMutableArray">
+					<reference ref="0"/>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="IBUserGuide">
+							<reference key="view" ref="490942180"/>
+							<double key="location">15</double>
+							<int key="affinity">0</int>
+						</object>
 					</object>
 					<string>STToolbar</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1495,7 +1637,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">116</int>
+			<int key="maxID">123</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1586,6 +1728,9 @@
 							<string>activityView</string>
 							<string>addFavoriteButton</string>
 							<string>addFavoriteLabel</string>
+							<string>alsoStampedByContainer</string>
+							<string>alsoStampedByLabel</string>
+							<string>alsoStampedByScrollView</string>
 							<string>bottomToolbar</string>
 							<string>categoryImageView</string>
 							<string>commentTextField</string>
@@ -1613,6 +1758,9 @@
 							<string>UIView</string>
 							<string>UIButton</string>
 							<string>UILabel</string>
+							<string>UIView</string>
+							<string>UILabel</string>
+							<string>UIScrollView</string>
 							<string>UIView</string>
 							<string>UIImageView</string>
 							<string>UITextField</string>
@@ -1643,6 +1791,9 @@
 							<string>activityView</string>
 							<string>addFavoriteButton</string>
 							<string>addFavoriteLabel</string>
+							<string>alsoStampedByContainer</string>
+							<string>alsoStampedByLabel</string>
+							<string>alsoStampedByScrollView</string>
 							<string>bottomToolbar</string>
 							<string>categoryImageView</string>
 							<string>commentTextField</string>
@@ -1678,6 +1829,18 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">addFavoriteLabel</string>
 								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">alsoStampedByContainer</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">alsoStampedByLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">alsoStampedByScrollView</string>
+								<string key="candidateClassName">UIScrollView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">bottomToolbar</string>
@@ -1796,6 +1959,7 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<string>also_stamped_by_badge@2x.png</string>
 				<string>gradient_background.png</string>
 				<string>gray_disclosure_arrow.png</string>
 				<string>green_button_bg.png</string>
@@ -1816,6 +1980,7 @@
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<string>{24, 24}</string>
 				<string>{320, 480}</string>
 				<string>{16, 16}</string>
 				<string>{16, 16}</string>
